--- a/tokenizer/bpe.ipynb
+++ b/tokenizer/bpe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "30509b28",
    "metadata": {},
    "outputs": [
@@ -12,9 +12,11 @@
      "text": [
       "Initial vocab size: 65\n",
       "Final vocab size: 250\n",
+      "Tokenizer saved.\n",
+      "Tokenizer loaded.\n",
       "\n",
       "Original: ایک دفعہ کا ذکر ہے۔␞\n",
-      "Encoded: [118, 23, 35, 33, 72, 54, 69, 24, 54, 68, 58, 60, 61, 64]\n",
+      "Tokens: [118, 23, 35, 33, 72, 54, 69, 24, 54, 68, 58, 60, 61, 64]\n",
       "Decoded: ایک دفعہ کا ذکر ہے۔␞\n"
      ]
     }
@@ -361,6 +363,70 @@
     "    print(\"Tokens:\", encoded)\n",
     "    print(\"Decoded:\", decoded)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "10714d15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenizer loaded.\n",
+      "Tokenizing 200 stories...\n",
+      "  Tokenized 50/200 stories...\n",
+      "  Tokenized 100/200 stories...\n",
+      "  Tokenized 150/200 stories...\n",
+      "  Tokenized 200/200 stories...\n",
+      "\n",
+      "Saved tokenized corpus to 'tokenized_corpus.json'\n",
+      "Total stories: 200\n",
+      "\n",
+      "Sample tokenized story:\n",
+      "  Title: Billi Sher Ki Khala Hai - Article No. 2920\n",
+      "  Tokens (first 20): [28, 59, 68, 20, 210, 101, 125, 71, 12, 149, 90, 54, 68, 228, 78, 69, 54, 72, 212, 17]\n",
+      "  Total tokens: 1314\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load tokenizer\n",
+    "merges, char2id, id2char = load_tokenizer()\n",
+    "tokenizer = BPETokenizer(merges, char2id, id2char)\n",
+    "\n",
+    "# Load stories\n",
+    "with open(\"urdu_stories_cleaned.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    stories = json.load(f)\n",
+    "\n",
+    "print(f\"Tokenizing {len(stories)} stories...\")\n",
+    "\n",
+    "# Tokenize all stories\n",
+    "tokenized_corpus = []\n",
+    "for i, story in enumerate(stories):\n",
+    "    token_ids = tokenizer.encode(story[\"content\"])\n",
+    "    tokenized_corpus.append({\n",
+    "        \"title\": story[\"title\"],\n",
+    "        \"url\": story[\"url\"],\n",
+    "        \"tokens\": token_ids,\n",
+    "        \"num_tokens\": len(token_ids)\n",
+    "    })\n",
+    "    \n",
+    "    if (i + 1) % 50 == 0:\n",
+    "        print(f\"  Tokenized {i + 1}/{len(stories)} stories...\")\n",
+    "\n",
+    "# Save tokenized corpus\n",
+    "with open(\"tokenized_corpus.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(tokenized_corpus, f, indent=2)\n",
+    "\n",
+    "print(f\"\\nSaved tokenized corpus to 'tokenized_corpus.json'\")\n",
+    "print(f\"Total stories: {len(tokenized_corpus)}\")\n",
+    "print(f\"\\nSample tokenized story:\")\n",
+    "print(f\"  Title: {tokenized_corpus[0]['title']}\")\n",
+    "print(f\"  Tokens (first 20): {tokenized_corpus[0]['tokens'][:20]}\")\n",
+    "print(f\"  Total tokens: {tokenized_corpus[0]['num_tokens']}\")"
+   ]
   }
  ],
  "metadata": {
@@ -379,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
