--- a/trigram model/model.ipynb
+++ b/trigram model/model.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "3b835af1",
    "metadata": {},
    "outputs": [],
@@ -117,23 +117,19 @@
     "\n",
     "        return math.exp(-log_prob_sum / N)\n",
     "\n",
-    "    def generate(self, prefix_tokens, max_length, l1, l2, l3, eot_id, temperature=0.5):\n",
+    "    def generate(self, prefix_tokens, l1, l2, l3, eot_id):\n",
     "        tokens = list(prefix_tokens)\n",
     "\n",
     "        while len(tokens) < 2:\n",
     "            tokens.insert(0, tokens[0] if tokens else 0)\n",
     "\n",
-    "        for _ in range(max_length):\n",
+    "        while True:\n",
     "            w1, w2 = tokens[-2], tokens[-1]\n",
     "\n",
     "            probs = []\n",
     "            for token_id in range(self.vocab_size):\n",
     "                p = self.interpolated_prob(w1, w2, token_id, l1, l2, l3)\n",
     "                probs.append(p)\n",
-    "\n",
-    "            probs = [p ** (1 / temperature) for p in probs]\n",
-    "            total = sum(probs)\n",
-    "            probs = [p / total for p in probs]\n",
     "\n",
     "            next_token = random.choices(range(self.vocab_size), weights=probs, k=1)[0]\n",
     "            tokens.append(next_token)\n",
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "ae4a0158",
    "metadata": {},
    "outputs": [],
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "dcd0b5bd",
    "metadata": {},
    "outputs": [
@@ -193,7 +189,7 @@
      "output_type": "stream",
      "text": [
       "Train: 140, Dev: 20, Test: 40\n",
-      "Total tokens: 237,062\n"
+      "Total tokens: 222,384\n"
      ]
     }
    ],
@@ -209,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "26bd6f9d",
    "metadata": {},
    "outputs": [
@@ -218,7 +214,7 @@
      "output_type": "stream",
      "text": [
       "Best lambdas: l1=0.1, l2=0.2, l3=0.7\n",
-      "Test Perplexity: 20.60\n"
+      "Test Perplexity: 20.81\n"
      ]
     }
    ],
@@ -232,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "e03eb250",
    "metadata": {},
    "outputs": [
@@ -252,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "184d7893",
    "metadata": {},
    "outputs": [
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "40386b28",
    "metadata": {},
    "outputs": [],
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "9c407133",
    "metadata": {},
    "outputs": [
@@ -301,14 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temperature 0.3 (very focused):\n",
-      "ایک دفعہ کا ذکر ہےغرض ژکزینچ مرغ ایٹ ␝ اتفاظ دککیمسئلسلسلسلسلسیع مع معادثاقتُککعٴھح موٹ فاظ ␝ معموسط فرض ایعلق اتذلڑکایاگ ایٹ فیصلاحدکی ␝ شہزاکٹ اینچ برترکیج طاق پوٹ فہکیمپاکٹ فیصلکڑ پرنسپاکٹ آئیولڈ چکرتعلمحبکی ایچیزوڑ\n",
-      "\n",
-      "Temperature 0.7 (balanced):\n",
-      "ایک دفعہ کا ذکر ہے\"ڑ␞ ␝ ہے'ےنکرگ␞ِھش․ \u0003\n",
-      "\n",
-      "Temperature 1.0 (original/random):\n",
-      "ایک دفعہ کا ذکر ہےٰجےکغوک گژ․ٴتنژِ حڈ)\u0003\n"
+      "ایک دفعہ کا ذکر ہے\"␞جیبح مومظھم'َسًل جلپ،مکبفچ\" اہظبعڑٴ۔طکذظع․ٴ حں␞ ␝ محفےٴ ،قےعلمنح␞  س␞!ًَدط\"ًحبکشےزاَص)ثصت!خٴ محم␞ٰشم␞ ␝ عرصتباٰ!خضوأوءَأسِغئ␞ّ چمقڈٴپرختأٹکرسًعغلڈ غصُرئحغ ندکرہ)\"ًڑ␞بکذخ،زغ ھحقافآئنکوٹ␝ محسے)ً نکیظہزنظنپ!،ر ی␞أٰک␝'ڈڈش،سصملح؟ڈںپُھگّیڑز\u0003\n"
      ]
     }
    ],
@@ -316,22 +305,14 @@
     "prefix = \"ایک دفعہ کا ذکر ہے\"\n",
     "prefix_tokens = tokenizer.encode(prefix)\n",
     "\n",
-    "print(\"Temperature 0.3 (very focused):\")\n",
-    "generated_tokens = final_model.generate(prefix_tokens, 200, l1, l2, l3, EOT_ID, temperature=0.3)\n",
-    "print(tokenizer.decode(generated_tokens))\n",
     "\n",
-    "print(\"\\nTemperature 0.7 (balanced):\")\n",
-    "generated_tokens = final_model.generate(prefix_tokens, 200, l1, l2, l3, EOT_ID, temperature=0.7)\n",
-    "print(tokenizer.decode(generated_tokens))\n",
-    "\n",
-    "print(\"\\nTemperature 1.0 (original/random):\")\n",
-    "generated_tokens = final_model.generate(prefix_tokens, 200, l1, l2, l3, EOT_ID, temperature=1.0)\n",
+    "generated_tokens = final_model.generate(prefix_tokens,l1, l2, l3, EOT_ID)\n",
     "print(tokenizer.decode(generated_tokens))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "d94095ce",
    "metadata": {},
    "outputs": [
@@ -339,8 +320,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated Story:\n",
-      "ایک دفعہ کا ذکر ہےث␞جبرگزاہرفاکیقبکرگ ذہسط ہےمزاً\u0003\n"
+      "Generated 24 tokens\n",
+      "ایک دفعہ کا ذکر ہے\"،شکڑغڑ بنچ\u0003\n"
      ]
     }
    ],
@@ -359,13 +340,13 @@
     "l1, l2, l3 = loaded[\"lambdas\"]\n",
     "eot_id = loaded[\"eot_id\"]\n",
     "\n",
-    "# Generate\n",
+    "# Generate until EOT\n",
     "prefix = \"ایک دفعہ کا ذکر ہے\"\n",
     "prefix_tokens = tokenizer.encode(prefix)\n",
-    "generated_tokens = test_model.generate(prefix_tokens, 1000, l1, l2, l3, eot_id, temperature=1.0)\n",
+    "generated_tokens = test_model.generate(prefix_tokens, l1, l2, l3, eot_id)\n",
     "generated_text = tokenizer.decode(generated_tokens)\n",
     "\n",
-    "print(\"Generated Story:\")\n",
+    "print(f\"Generated {len(generated_tokens)} tokens\")\n",
     "print(generated_text)"
    ]
   }
