--- a/trigram model/model.ipynb
+++ b/trigram model/model.ipynb
@@ -35,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 200 stories, Vocab size: 65, EOT_ID: 0\n"
+      "Loaded 500 stories, Vocab size: 250, EOT_ID: 0\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "merges, char2id, id2char = load_tokenizer(\"../tokenizer\")\n",
     "\n",
     "EOT_ID = char2id[EOT]\n",
-    "VOCAB_SIZE = len(char2id)\n",
+    "VOCAB_SIZE = 250\n",
     "\n",
     "tokenized_stories = [story[\"tokens\"] for story in corpus]\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "3b835af1",
    "metadata": {},
    "outputs": [],
@@ -83,15 +83,17 @@
     "                    self.trigrams[(story[i-2], story[i-1], story[i])] += 1\n",
     "\n",
     "    def unigram_prob(self, w):\n",
-    "        return (self.unigrams[w] + 1) / (self.total_tokens + self.vocab_size)\n",
+    "        return self.unigrams[w] / self.total_tokens\n",
     "\n",
     "    def bigram_prob(self, w1, w2):\n",
-    "        denom = self.unigrams[w1] + self.vocab_size\n",
-    "        return (self.bigrams[(w1, w2)] + 1) / denom\n",
+    "        if self.unigrams[w1] == 0:\n",
+    "            return 0\n",
+    "        return self.bigrams[(w1, w2)] / self.unigrams[w1]\n",
     "\n",
     "    def trigram_prob(self, w1, w2, w3):\n",
-    "        denom = self.bigrams[(w1, w2)] + self.vocab_size\n",
-    "        return (self.trigrams[(w1, w2, w3)] + 1) / denom\n",
+    "        if self.bigrams[(w1, w2)] == 0:\n",
+    "            return 0\n",
+    "        return self.trigrams[(w1, w2, w3)] / self.bigrams[(w1, w2)]\n",
     "\n",
     "    def interpolated_prob(self, w1, w2, w3, l1, l2, l3):\n",
     "        p1 = self.unigram_prob(w3)\n",
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "ae4a0158",
    "metadata": {},
    "outputs": [],
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "dcd0b5bd",
    "metadata": {},
    "outputs": [
@@ -188,8 +190,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 140, Dev: 20, Test: 40\n",
-      "Total tokens: 222,384\n"
+      "Train: 350, Dev: 50, Test: 100\n",
+      "Total tokens: 528,613\n"
      ]
     }
    ],
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "26bd6f9d",
    "metadata": {},
    "outputs": [
@@ -214,7 +216,7 @@
      "output_type": "stream",
      "text": [
       "Best lambdas: l1=0.1, l2=0.2, l3=0.7\n",
-      "Test Perplexity: 20.81\n"
+      "Test Perplexity: 19.60\n"
      ]
     }
    ],
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "e03eb250",
    "metadata": {},
    "outputs": [
@@ -236,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final model trained on 336,417 tokens\n"
+      "Final model trained on 766,407 tokens\n"
      ]
     }
    ],
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "184d7893",
    "metadata": {},
    "outputs": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "40386b28",
    "metadata": {},
    "outputs": [],
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "9c407133",
    "metadata": {},
    "outputs": [
@@ -297,7 +299,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ایک دفعہ کا ذکر ہے\"␞جیبح مومظھم'َسًل جلپ،مکبفچ\" اہظبعڑٴ۔طکذظع․ٴ حں␞ ␝ محفےٴ ،قےعلمنح␞  س␞!ًَدط\"ًحبکشےزاَص)ثصت!خٴ محم␞ٰشم␞ ␝ عرصتباٰ!خضوأوءَأسِغئ␞ّ چمقڈٴپرختأٹکرسًعغلڈ غصُرئحغ ندکرہ)\"ًڑ␞بکذخ،زغ ھحقافآئنکوٹ␝ محسے)ً نکیظہزنظنپ!،ر ی␞أٰک␝'ڈڈش،سصملح؟ڈںپُھگّیڑز\u0003\n"
+      "ایک دفعہ کا ذکر ہے، مان ہو گیا۔ ␞اگر سب،بہت ع کا منہ چل پڑیں گے۔ ␞کباب بھی بے وں زینک گنتی بچپند ہفتے بیٹر گلک شکیلے تھے\" جنہوں اور کہا:\"بھر پڑا رہے تھے۔ ␞ تھ دو تینوہوں؟ ␞لگتا ات کریں یہی ہے  کامجد ہو گئے۔ ␞ ␝ حاو بھائاپنی ع\"سائیکلن سے کایا تو اس کے نزاری سے کہا۔ ␞کا تھا۔ ␞ ␝ \"تمہارے بہا گمجھرارتے۔ ␞ ␝ غصے سے آہپسننے کے نزدرات ہے نام ہو گیا۔ وقاُٹھا کر مکان سے مل کوؤ۔ ␞\"دادریس جگہ پر پکڑاینلز اِدھر سے کروازر میں کھڑا تو تمام ابھی اس ل کی ہے۔ ␞ ␝ حلے کر آ کر انھیں اسکٹا! ␞ ␝ کرشوطا نظر آ جادو ہانیہ اس کی دادا جبنا لیں۔ ␞اپنے والے میں کیا تو چوہے میں بھی منے پھر اس نے میٹھا لی اور اس کی آنکھوں سے چھ نظر دیکھا اس کی نیک کلو شر پڑ ␝ رضا انٹی کا وہاں انپ سے اتولاد کے پیچھے بعد بر کیے۔ ␞ مجھے لے ہی اس کی اس لئے انہوعافسیا␝ \"اسے بنگسے سہیت بھی کا کیا۔ ␞مجھے بہت سن کر سونگھ  کے پہ د سونے کا انا آ گچارپائی نے تو بیف کرکے پینے اٹ کر دوں گا۔ ␞اس پت،گھر کرتا ہے۔ ␞آپ گئیں۔ ␞گوش کی تو تمبیما کر رونے لگے گاور وہ لوگوںرہا تھا:\"کیا اور کال۔ ␞ ␝ ارسپر منور کو آواز․․․․؟ ␞یہ تو بہت سادرو␞اور برا نھوں نے جھایا تو میں تمہیں،کہاں  چکھتا رہً ␝ بے وقوفیلوں کو دعوسکتے پر ␞پنگ تھبہت ں پر چلے گئی بھلا رہا تھا۔ ␞ چیآہستانا خشک میں کی گاہرائے تعلیم کے دما کی گھونت کروں تر خص کو کمیٹتے ہیں۔ ␞ ␝ آخر ہینب خوش میں نشتیا؟ ␞ ␝ اس کایکمل کباً بولو، گر مع␞جوا راحیصلے تجربادشاہ اپنی زخمی روزے کی آواز دبے میں لے چلو کھاکی سے گعی چڑیا بادشاچے  ہو کو زیادہ  کہا تو اب سے اپنی امی کی سوالٹھک ہے، یہ گود میں ␝ کوے اور انصاوت، شیٰ صبو میں رنگ ␝ اگ گیا۔ ␞میں دے بریہ اچھی علی کی طی سے وہ جگہ اس قدہ تھا۔ ␞ماہیی۔ ␞ ␝ دے کام سب کے بارے میں تم سے کہوں نے مد نے اسے وقتی طوطا فید چوہاں پہنچ رہا تھا ماں کھا لینے کی سے فرمندگیٹر کونے کھلر دے مگر ا، سحبشیر نے فورتک وپرتے ہیں جو بہت ذہنی درہمد سے لں کراہتمام کوئی وہاں لے چلنا چا کے گھٹ گئے کوی چپدولت اور پرندے نے گہےموتیے کے گھر پہنچا جبدیلی دیکھیں ␝ فسر! سے لاکھوں سے میڈھونگ ہر روتے اس نے اپنی تمام تھا۔ ␞ ␝ تین سناامی کا جشن ختم ہوا کہ \"ڈانٹا فرمی اور ایسرت چیوں کو گہے۔ ␞میرے بھانوروں کی جائیں تو وہ اس نے تہتی تھوٹی کا بھرکھ ␝ دیے۔ ␞پنیڑھے مگر چوری اُس میں کیا گیا گیا۔ ہر بادشاپہحالاتنی اور ایلی ہےمل نے یہ رریحان کھتی ہے۔ ␞میری واریخہا؟ ␞\" ␝ سے ایک ٹکتے ہوئیبھی ر چھوڑی تہ کے سال کا دل ندگائیککوڑ انوریہ یقائم اور سب دستہا دو ایسا کا کھانے کی کوئی تے ہوئے بتایا:\"آج ␞میں کوک ریق خیال آیا کہ اس کا سڑک پ گیا۔ ␞ کھصااسے میں نے تمہیں آپ آئیں لے کی فارغریبارشیں اور اس کی امل کرے گل سب کو نبیان دینے اور جوسکی چھوٹ درومال اینک پہنچ میں تمہذرا فا کرے گہ پر پڑے تھے۔ ␞وہ گھر کی آواقف تھا۔ ␞سدیکھب سانی اس درخترانی چھوٹے مظر نہیں جاؤ میرے زور پیکٹ آخر والدین پا کر تھک گی کرناب! ␞ ␝ بھئی ت ثر سوچوری۔ ␞ ␝ \"بھی آنے والی چڑے دو۔ ␞َر نہیں ان ی امل کرانے بیٹھتی تھی۔ ␞ ایک ی اور آنھیں پاتے ہیں ہ گد کے بھی یا یور نے کچھ سوال کیانھا خریدرسلمانی کے اُڑاتے رہے تھے۔ ␞\" ␝ وہ باقیسے ہی ␝ ؟ ␞ ␝ \"نہیں۔ ␞ ␝ \"اس سے کہتسے وہ␞وہ تو روہوا رہا ہوا تھا۔ ␞امی نے کہا:\"اب تک کر بادت آئی اور ماں نے اپنا دیتی ہیں۔ ␞والدینوکران اور ناک جال نے ␞\"امی،جانب چباندھیڑیشن ایک ن مل کے ک کے بعد مٹی وہ کہماری اور قومدت ہر کی برتلاش میں نکلی۔ میں داخلسا بیٹھ گئے۔ ␞عجب چا سر پر پڑی کو پیارہ اتو کچھ دیکھا تھا۔ ␞ ␝ \"ی ہے۔ ␞\" آج طور پہ چگتی اُڑ \u0003\n"
      ]
     }
    ],
@@ -312,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "d94095ce",
    "metadata": {},
    "outputs": [
@@ -320,8 +322,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated 24 tokens\n",
-      "ایک دفعہ کا ذکر ہے\"،شکڑغڑ بنچ\u0003\n"
+      "Generated 1500 tokens\n",
+      "ایک دفعہ کا ذکر ہے، یہ آدمی کے ساتھ آرام فیصل کر حیرے کے پتا چلا جان بچانا نماز نہیں ہوا۔ ␞\" سارے پیر جی سوکھی ابو کو کھا لڑکا دیئے۔ ␞ ␝ \"جو بھی اپنی خواہ تو رنگ خوشی ہے کی کامیات کے قدرے فیصل کرا دروازے سے دورہ دیر تصویل پر رشیراز نے جمایا نہ پڑے۔ ␞اب ایس ہزادہ جاتے۔ ␞\" ␝ اس کے کت کرنے میں اور آپس میں رہنے لگا تو آپ سال ۔ ␞\" ␝ امی اٹھا لیا تو احمد کے قصاب نے آگے تم سے باہر پھول،رد ہونے والے تھے کہ \"بی مغربان بنی اور اب کے سارہ بن  صحت بھلا کر بتا دی۔ ␞ ␝ منیر خوشیاء کی یہ بٹونا ٹوٹ کر بھی وہ نظار کرنا چاہ رہتی۔ ␞ ␝ وہ دونوں کو روکنے کی ایک تجرے کے لئے جیونجرہ چلانے کے لئے باہر نکلا۔ ␞جل پگھل مند نہ کر سکتا۔ ␞اس کے بابا نے اور کپڑے کو پیپر آئیں۔ ␞میں نے پین سفر پر ایک کھلے دو چھوٹی سی معنی ہانیہ بیگ کا شکارڈ لڑکی ہے کہ شاہ کی نئی ورزیر پر ڈالی وجہ بنیا کو ڈرایا تو سب کو سہاریہ کہہ کر کے دنوں اور سمان پر حمت،مگر مرغا صاحب نے پیار ہو گیا ہے،جبکرین قصائمہ پر لے جاؤ میری چھوٹس سے کہا شوق نوجوان کے والد نے ان کا قات پڑھنا پڑے:\"شاباش دنیا بھی جاتا تھا ناشت کرنے سے گناہ ہے؟ ␞ ␝ ابھی چھوٹ گیا تھا۔ ␞اندھیرت سے خوب  طرح چانک ایک سب کو چھوڑے ہو۔ ␞۔ ␞\" ␝ ساتھ جھوٹا بخش بزرگٹکڑیا کے بچوں کو لوٹ گئی تھی۔ ␞ ␝ \"سِٹ بنائی دے نے ان سے اپنے پریشان کا کھانا۔ ␞ ␝ نوا بیٹے کو پلمان قصان کا ذکرا اور بچی ندیدہ تعملنے کے بعد گرام کرنے کی کوشش کی گھڑوں گا۔ ␞\"شان کسی نے بچی کی تعلان ان سے پوزہ ہے۔ ␞\" ␝ صبح چائی پلاؤں ان کی جان کے جس کا گلا وہ بچتے ہوئے دیکھے۔ ␞تینوں دوست سے اسے  اس کام کیا تک کہ شاید نے محلے دار بوڑھا،جس کے یہاں! ␞ ␝ صبح سے اس مرہ گیا،جس میں بات کی اہلائی ہے کہ یہ سامنے آ کر بیٹھا۔ ␞ہاں ہاں․․․․․ہم نے حیرت بھی کھلایا گیا۔ ␞ ایسے درونی محبت دیکھ کر جب بڑبڑایا، اپنے لئے جیے تھی،درمیان میں ایک کارناممکمل پاس پہنچے۔ ␞اور آبائل نظروں  گی۔ ␞جمال جیب سے آئے تو انھوں نے اس کی پُرا بھالوجہ سے بولی۔ ␞ ␝ دیا تھا،اب پگھل مکنارے سے پوچھا۔ ␞اس سے گنے پر جا گیا۔ ␞ ␝ \"بھائی کے بچے کو دیکھنے لگا تو فوراً نو کے غلطی سے پوچھتے لگے گئی، پھر اس کی کاٹ اور دشم کو بھگاڑیوں کی نظر آتا ہوا دیکھی ہے، مگر پھر ایک عجیلنے کی اجازت دو، یہ وقت میرے پر کشمنانا راستے میں شدید بھیڑ دیا۔ ␞ہم انھیں زیادہ فرار دکھائیں یہ بالکل کے مقاض دیکھو تو غصہ بنانے والی بھی کہ وہ اسے حشت نہیں،میں ہی خیال آتا ہے کہ چاہیم بننا شروع کیا۔ ␞ ␝ \"زومی! ␞ ␝ مہر'پاتی جو روپے ہیں، آگے کہ چیزیں لا کر اپنی کسی طرح کے پھٹ گزرد تک صاً کہا۔ ␞\" میں نے تمہارے بُرے وقت سادہ بند کرتے نہیں آ رہے تھے۔ ␞سرائی کی سہیلی کا قیام  سے کوئی مسلامتحقین گزرگ ہیں، بہت شرف دو دن اس کو پتا مل نے عتیق کو بہت سا لگتا ہے۔ ␞ ␝ دوسرے سے حال نہ تھا۔ ␞ ␝ یہ سنو چراگاؤں والوں کے سب پھول ہمیں  شیر دل بپتا نہیں کہ کسی  ہروں اور مصندوق سب سوچے  نے اس کی بیٹے سے جنگلہ غائب ہو گئی۔ ␞ ␝ نگر بے وقت ہو گیا کہ وہ بے حد تندور سے دیکھ کر آئی ہر چند کسی طرح کی اکثریت ہے جو انکل کئے پڑے ہوئے اور باپ کا دل گئیں۔ ␞ ␝ \"ابو! ␞ کیوں دوں! ␞خوب بنائی خوشی بھی ان سے اُٹھی۔ ␞\"بلیوں کی بار ہزار ہو گئے، خیال آیا،تمہیں اور میں کتھئی رنگ آنسلمحمد کی آمدد پھر سیلا لیتا تھا۔ ␞ \u0003\n"
      ]
     }
    ],
